# anti-scam-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
analysis/: dot_plot.ipynb  verdict_plot.ipynb
data/: scam_urls.csv  websites.csv
docs/superpowers/plans/: 2026-04-14-anti-scam-agent-mvp.md  2026-06-14-bucket1-precision-fixes.md  2026-06-14-bucket2-static-signals.md  2026-06-14-bucket3-email-evidence.md  2026-06-14-precision-flow-completion.md  2026-06-15-analysis-ordinal-verdict.md  2026-06-15-flow-completion-done-criterion.md  2026-06-15-run-logging.md  2026-06-16-web-api-extension.md
docs/superpowers/specs/: 2026-04-13-anti-scam-agent-mvp-design.md  2026-06-14-precision-flow-completion-design.md  2026-06-14-precision-signals-upgrade-design.md  2026-06-15-analysis-ordinal-verdict-design.md  2026-06-15-flow-completion-done-criterion-design.md  2026-06-15-run-logging-design.md  (+1 more)
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js
plot/: dot_plot.ipynb  uncertain_binary.ipynb  verdict_plot.ipynb
src/anti_scam_agent/: __main__.py  analysis.py  api.py  browsing.py  db.py  email_evidence.py  models.py  persona.py  pipeline.py  reporting.py  server.py  signals.py  web_report.py
tests/: test_analysis.py  test_api.py  test_browsing.py  test_db.py  test_dependencies.py  test_email_evidence.py  test_models.py  test_persona.py  test_pipeline.py  test_reporting.py  test_signals.py  test_tools.py  test_web_report.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  types.ts
(+11 files in other folders)
