[project]
name = "anti-scam-agent"
version = "0.1.0"
authors = [
    { name="Hao-Quan Liu", email="contact@haoquan.me" }
]
description = "Anti-Spam Agent is a multi-agent system that uses LLMs to impersonate real users on specified web pages and detect data-phishing attempts in real time, without relying on blacklist databases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.13.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-whois>=0.9.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
anti-scam-agent = "anti_scam_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anti_scam_agent"]
